force-app/main/default/objects/Month_Estimate__c/Month_Estimate__c.object-meta.xml
<CustomObject>
    <label>Month Estimate</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Month Estimate Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Month Estimate</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>