force-app/main/default/objects/Month_Estimate__c/fields/Customer_Charge__c.field-meta.xml
<CustomField>
    <fullName>Customer_Charge__c</fullName>
    <description>Monthly flat cost per customer (not TDSP pass-through)</description>
    <inlineHelpText>Monthly flat cost per customer (not TDSP pass-through)</inlineHelpText>
    <label>Customer Charge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>