force-app/main/default/objects/Month_Estimate__c/fields/Energy_Charge__c.field-meta.xml
<CustomField>
    <fullName>Energy_Charge__c</fullName>
    <description>Cost for the electricity excluding other fees and charges</description>
    <inlineHelpText>Cost for the electricity excluding other fees and charges</inlineHelpText>
    <label>Energy Charge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>