force-app/main/default/objects/Month_Estimate__c/fields/Local_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Local_Sales_Tax__c</fullName>
    <description>Estimated taxes from your city and county.  Electricity is not subject to the state sales tax.</description>
    <inlineHelpText>Estimated taxes from your city and county.  Electricity is not subject to the state sales tax.</inlineHelpText>
    <label>Local Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>