force-app/main/default/objects/Month_Estimate__c/fields/MGRT__c.field-meta.xml
<CustomField>
    <fullName>MGRT__c</fullName>
    <description>Miscellaneous Gross Receipts Tax</description>
    <inlineHelpText>Miscellaneous Gross Receipts Tax</inlineHelpText>
    <label>MGRT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>