force-app/main/default/objects/Month_Estimate__c/fields/Minimum_Usage_Charge__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Usage_Charge__c</fullName>
    <description>Charge for not using enough energy</description>
    <inlineHelpText>Charge for not using enough energy</inlineHelpText>
    <label>Minimum Usage Charge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>