force-app/main/default/objects/Month_Estimate__c/fields/Month_Number__c.field-meta.xml
<CustomField>
    <fullName>Month_Number__c</fullName>
    <description>Which calendar month this estimate is for (Jan=1, Dec=12)</description>
    <inlineHelpText>Which calendar month this estimate is for (Jan=1, Dec=12)</inlineHelpText>
    <label>Month Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>