force-app/main/default/objects/Month_Estimate__c/fields/Plan_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Plan_Estimate__c</fullName>
    <label>Plan Estimate</label>
    <referenceTo>Plan_Estimate__c</referenceTo>
    <relationshipLabel>Month Estimate</relationshipLabel>
    <relationshipName>Month_Estimate</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>