force-app/main/default/objects/Month_Estimate__c/fields/PUCA__c.field-meta.xml
<CustomField>
    <fullName>PUCA__c</fullName>
    <description>Public Utility Commission charge</description>
    <inlineHelpText>Public Utility Commission charge</inlineHelpText>
    <label>PUCA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>