force-app/main/default/objects/Month_Estimate__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate</label>
    <referenceTo>Rate__c</referenceTo>
    <relationshipLabel>Month Estimate</relationshipLabel>
    <relationshipName>Month_Estimate</relationshipName>
    <type>Lookup</type>
</CustomField>