force-app/main/default/objects/Month_Estimate__c/fields/TDSP_per_kWh__c.field-meta.xml
<CustomField>
    <fullName>TDSP_per_kWh__c</fullName>
    <description>Volumetric delivery charge (TDSP pass-through)</description>
    <inlineHelpText>Volumetric delivery charge (TDSP pass-through)</inlineHelpText>
    <label>TDSP per kWh</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>