force-app/main/default/objects/Month_Estimate__c/fields/TDSP_per_Month__c.field-meta.xml
<CustomField>
    <fullName>TDSP_per_Month__c</fullName>
    <description>Monthly TDSP fixed charges per customer, including AMS</description>
    <inlineHelpText>Monthly TDSP fixed charges per customer, including AMS</inlineHelpText>
    <label>TDSP per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>