force-app/main/default/objects/Month_Estimate__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>total for that month</description>
    <inlineHelpText>total for that month</inlineHelpText>
    <label>Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>